# GPT2

./: .gitignore  Dataloaderlite.py  README.md  fineweb.py  main.py  plot.py  pyproject.toml  train.sh  train_gpt2.py
Code/: Dataloaderlite.py  fineweb.py  hellaswag.py  plot.py  plot_hellaswag.py  train_gpt2.py
log/: hellaswag_results.jsonl  metrics.jsonl
